--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "justproject",
+  "name": "toveproject",
+  "homepage": "toveproject",
   "version": "0.2.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "antd": "^5.6.1",
     "bulma": "^0.9.4",
     "crypto-js": "^4.0.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
@@ -22,6 +24,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
